Require and support minimum Java 8 to build the project